<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_no">No</string>
    <string name="alert_ok">OK</string>
    <string name="alert_yes">Yes</string>
    <string name="app_name">Chess</string>
    <string name="app_name_help">Help</string>
    <string name="app_name_import">Import</string>
    <string name="app_name_pgntools">Advanced</string>
    <string name="app_name_play">Play</string>
    <string name="app_name_playonline">Play online</string>
    <string name="app_name_save_games">Saved games</string>
    <string name="app_name_setup">Setup</string>
    <string name="boardprerences">Board settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_login">Login</string>
    <string name="button_menu">Menu</string>
    <string name="button_new">New</string>
    <string name="button_ok">OK</string>
    <string name="button_play">Play</string>
    <string name="button_register">Register</string>
    <string name="button_save">Save</string>
    <string name="button_save_copy">Save copy</string>
    <string name="button_undo">Undo</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="chess960_position_nr">Chess 960 position nr %d</string>
    <string name="choice_bishop">Bishop</string>
    <string name="choice_clock_num_minutes">%d minutes</string>
    <string name="choice_delete">Delete</string>
    <string name="choice_edit">Edit</string>
    <string name="choice_knight">Knight</string>
    <string name="choice_level_1">1 sec</string>
    <string name="choice_level_10">15 minutes</string>
    <string name="choice_level_2">2 sec</string>
    <string name="choice_level_3">4 sec</string>
    <string name="choice_level_4">8 sec (average)</string>
    <string name="choice_level_5">10 sec</string>
    <string name="choice_level_6">20 sec</string>
    <string name="choice_level_7">30 sec (experienced)</string>
    <string name="choice_level_8">1 minute</string>
    <string name="choice_level_9">5 minutes</string>
    <string name="choice_manually">Manually</string>
    <string name="choice_match_rated">Rated</string>
    <string name="choice_match_unrated">Unrated</string>
    <string name="choice_queen">Queen</string>
    <string name="choice_random">Random</string>
    <string name="choice_rook">Rook</string>
    <string name="color_picker_brightness">Brightness</string>
    <string name="color_picker_dark">Dark</string>
    <string name="color_picker_light">Light</string>
    <string name="color_picker_selected">Selected</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="games_list_white_pieces">White pieces</string>
    <string name="gameslist_black_pieces">Black pieces</string>
    <string name="gameslist_date">Date</string>
    <string name="gameslist_event">Event</string>
    <string name="gameslist_id">ID</string>
    <string name="gameslist_stars">Stars</string>
    <string name="globalpreferences">Global settings</string>
    <string name="ics_seekchallenge">Challenge</string>
    <string name="ics_seekcolor">Color</string>
    <string name="ics_seekformula">Formula</string>
    <string name="ics_seekmanual">Manually Accept</string>
    <string name="ics_seekplayer">Player</string>
    <string name="ics_seekrangemax">Rating-Range MAX</string>
    <string name="ics_seekrangemin">Rating-Range MIN</string>
    <string name="ics_seekrated">Rated game</string>
    <string name="ics_seekseek">Seek</string>
    <string name="ics_seektime">Time (min)</string>
    <string name="ics_seektimeinc">Time increment (secs)</string>
    <string name="ics_seekvariant">Variant</string>
    <string name="msg_setup_castle_black">Black</string>
    <string name="msg_setup_castle_white">White</string>
    <string name="msg_setup_enpassant">En-passant square</string>
    <string name="msg_setup_turn">Turn</string>
    <string name="msg_setup_turn_black">black</string>
    <string name="msg_setup_turn_white">white</string>
    <string name="options_level_ply">Level (ply)</string>
    <string name="options_level_time">Level (time)</string>
    <string name="options_play_android">Human vs Android</string>
    <string name="options_play_black">Black</string>
    <string name="options_play_human">Human vs Human</string>
    <string name="options_play_white">White</string>
    <string name="playonlinepreferences">Play online settings</string>
    <string name="playpreferences">Play settings</string>
    <string name="pref_colorscheme">Color scheme</string>
    <string name="pref_colorscheme_desc">Colors for the board tiles</string>
    <string name="pref_eco">ECO info</string>
    <string name="pref_eco_desc">Show ECO opening info when available</string>
    <string name="pref_fullscreen">Enable full screen</string>
    <string name="pref_fullscreen_desc">Recommended for small screens and landscape view; elements may fall off the screen otherwise</string>
    <string name="pref_icsautosought">Auto sought</string>
    <string name="pref_icsautosought_desc">Refresh the challenges screen automatically</string>
    <string name="pref_icsconsolecharactersize">CONSOLE character size</string>
    <string name="pref_icsconsolecharactersize_desc">Adjust the size of characters in CONSOLE</string>
    <string name="pref_icscustomcommand">Custom commands</string>
    <string name="pref_icscustomcommand_desc">Create your own custom commands</string>
    <string name="pref_icsgamestartsound">Game Start Sound</string>
    <string name="pref_icsgamestartsound_desc">Play sound when game starts or loss of connection</string>
    <string name="pref_icsnotification">Notification of New Game</string>
    <string name="pref_icstimewarning">Time Low Warning</string>
    <string name="pref_icstimewarning_desc">A ticking noise warns you if your time is at Time Warning Amount or less</string>
    <string name="pref_icstimewarningsecs">Time Warning Amount (secs)</string>
    <string name="pref_icstimewarningsecs_desc">How many seconds until time warning starts?</string>
    <string name="pref_localelanguage">Set The Language</string>
    <string name="pref_localelanguage_desc">Choose the language you would like to use</string>
    <string name="pref_move_sound_on">Move sound</string>
    <string name="pref_move_sound_on_desc">Plays sound when a move was made</string>
    <string name="pref_onLoadJumpToLastMove">Jump to last move</string>
    <string name="pref_onLoadJumpToLastMove_desc">When resuming the App, jump to the last move</string>
    <string name="pref_pieceset">Piece set</string>
    <string name="pref_pieceset_desc">The kind of piece set to display</string>
    <string name="pref_showCoords">Coordinates</string>
    <string name="pref_showCoords_desc">Show board coordinates</string>
    <string name="pref_showLastMove">Show last move</string>
    <string name="pref_showLastMove_desc">Shows the last move with highlighted squares</string>
    <string name="pref_show_annotate">Annotate move</string>
    <string name="pref_show_blindfold">Blindfold mode</string>
    <string name="pref_show_captured">Captured pieces</string>
    <string name="pref_show_engine_info">Engine info</string>
    <string name="pref_show_moves">Move history</string>
    <string name="pref_show_seek">Move seek bar</string>
    <string name="pref_skipreturn">Skip carriage return</string>
    <string name="pref_skipreturn_desc">For USB board, a carriage return will be skipped so it does not close the app</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_desc">Played when your opponent moves</string>
    <string name="pref_speech">Speech</string>
    <string name="pref_speech_desc">Tells the move that was made</string>
    <string name="pref_wakelock">Use wake lock</string>
    <string name="pref_wakelock_desc">This will prevent your phone going to sleep</string>
    <string name="prefs_icsendgamedialog">EndGame Dialog</string>
    <string name="prefs_icsendgamesummary">At the end of a game, do you want a save dialog to popup?</string>
    <string name="prefs_icsnotificationsummary">Lets you know the start of a game with an icon</string>
    <string name="prefs_icsshowclock">Show Clock Times in PGN</string>
    <string name="prefs_icsshowclocksummary">In the PGN, show the clock times on each move</string>
    <string name="savegame_black">Black</string>
    <string name="savegame_date">Date</string>
    <string name="savegame_event">Event</string>
    <string name="savegame_white">White</string>
</resources>