<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RatingBar android:id="@id/RatingBarSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:max="5" android:numStars="5" android:rating="2.5" android:isIndicator="false" />
        <TableLayout android:id="@id/TableSaveOptions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/RatingBarSave">
            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/savegame_event" style="@style/MyLabelTextStyle" />
                <EditText android:id="@id/EditTextSaveEvent" android:layout_width="200.0dip" android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/savegame_white" style="@style/MyLabelTextStyle" />
                <EditText android:id="@id/EditTextSaveWhite" android:layout_width="200.0dip" android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/savegame_black" style="@style/MyLabelTextStyle" />
                <EditText android:id="@id/EditTextSaveBlack" android:layout_width="200.0dip" android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/savegame_date" style="@style/MyLabelTextStyle" />
                <Button android:id="@id/ButtonSaveDate" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="YYYY.MM.DD" />
            </TableRow>
        </TableLayout>
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/TableSaveOptions">
            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/ButtonSaveSave" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0px" android:text="@string/button_save" android:layout_weight="1.0" />
                <Button android:enabled="false" android:id="@id/ButtonSaveCopy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0px" android:text="@string/button_save_copy" android:layout_weight="1.0" />
                <Button android:id="@id/ButtonSaveCancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0px" android:text="@string/button_cancel" android:layout_weight="1.0" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>
